# py-fancy-table

./: CLAUDE.md  README.md  pyproject.toml
example/: simple.py
fancy_table/: __init__.py  fancy_table.py
tests/: test_fancy_table.py
