[tool.poetry]
name = "fancy-table"
version = "0.1.3"
description = ""
authors = ["Antonio <mr.antonsilin@gmail.com>"]
readme = "README.md"
packages = [{include = "fancy_table"}]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
