[tool.poetry]
name = "fancy-table"
version = "0.1.9"  # set by antonio-py-dynamic-version
description = ""
authors = ["Antonio <mr.antonsilin@gmail.com>"]
readme = "README.md"
packages = [{include = "fancy_table"}]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
antonio-py-dynamic-version = {git = "https://bitbucket.org/asilin/antonio-py-dynamic-version.git"}
pytest = "^7.4.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
